# rocket-htmx

./: Cargo.toml  README.md
src/: main.rs
templates/: clock.html  comp1.html  index-demo.html  index.html  sse-comp.html
