[package]
name = "rocket-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_contrib = { version = "0.4.11", features = ["json", "templates"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

